kubernetes/apps/cilium/networkpolicies/egress-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-namespace
spec:
  endpointSelector:
    matchLabels:
      rpi5.cluster.policy/egress-namespace: "true"
  egress:
    - toEndpoints:
        - {}
